@@ -1,3 +1,6 @@
+Jul 03, 2020
+  obo file creator: updated code to export term def xrefs
+
 Jul 02, 2020
   parser: updated code to load term def xrefs
 
